--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <ul>
             <li>
                 <div class="coloured-edge-games"></div>
-                <a href="Game.html">Homework due Tuesday 2nd January 8am</a>
+                <a href="game.html">Homework due Tuesday 2nd January 8am</a>
                 <p>Not started</p>
             </li>
             
